# pikkr

.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_rec.rs
mayhem/: Dockerfile  parse_rec.mayhemfile
